[gd_scene load_steps=21 format=2]

[ext_resource path="res://game/Game.gd" type="Script" id=1]
[ext_resource path="res://game/map/Map.gd" type="Script" id=2]
[ext_resource path="res://data/Tileset.tres" type="TileSet" id=3]
[ext_resource path="res://player/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://game/Camera.gd" type="Script" id=5]
[ext_resource path="res://sprites/effects/tile-select.png" type="Texture" id=6]
[ext_resource path="res://game/map/Cursor.gd" type="Script" id=7]
[ext_resource path="res://game/DebugMenu.gd" type="Script" id=8]

[sub_resource type="DynamicFontData" id=1]
antialiased = false
font_path = "res://fonts/advocut/advocut-webfont.ttf"

[sub_resource type="DynamicFontData" id=2]
antialiased = false
font_path = "res://fonts/graphicpixel.ttf"

[sub_resource type="DynamicFont" id=3]
font_data = SubResource( 2 )
fallback/0 = SubResource( 1 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 1, 1, 0.184314 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
shadow_size = 8
anti_aliasing = false

[sub_resource type="DynamicFontData" id=10]
antialiased = false
font_path = "res://fonts/advocut/advocut-webfont.ttf"

[sub_resource type="DynamicFontData" id=11]
antialiased = false
font_path = "res://fonts/graphicpixel.ttf"

[sub_resource type="DynamicFont" id=12]
font_data = SubResource( 11 )
fallback/0 = SubResource( 10 )

[sub_resource type="DynamicFontData" id=6]
antialiased = false
font_path = "res://fonts/advocut/advocut-webfont.ttf"

[sub_resource type="DynamicFontData" id=7]
antialiased = false
font_path = "res://fonts/graphicpixel.ttf"

[sub_resource type="DynamicFont" id=8]
font_data = SubResource( 7 )
fallback/0 = SubResource( 6 )

[sub_resource type="Animation" id=9]
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="Debugging" type="CanvasLayer" parent="."]

[node name="DebugMenu" type="PanelContainer" parent="Debugging"]
visible = false
margin_left = 40.0
margin_top = 40.0
margin_right = 340.0
margin_bottom = 190.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme = SubResource( 4 )
custom_styles/panel = SubResource( 5 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="Debugging/DebugMenu"]
margin_right = 300.0
margin_bottom = 71.0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Debugging/DebugMenu/Buttons"]
margin_right = 300.0
margin_bottom = 17.0
size_flags_vertical = 0
custom_fonts/font = SubResource( 12 )
text = "Debug Menu"
align = 1

[node name="VectorButton" type="Button" parent="Debugging/DebugMenu/Buttons"]
margin_top = 21.0
margin_right = 154.0
margin_bottom = 44.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Rotate Character"

[node name="Move Right" type="Button" parent="Debugging/DebugMenu/Buttons"]
margin_top = 48.0
margin_right = 89.0
margin_bottom = 71.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Walk Right"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GUI" type="CanvasLayer" parent="."]

[node name="Loading" type="Label" parent="GUI"]
margin_left = -0.634033
margin_top = 0.374577
margin_right = 38.366
margin_bottom = 9.37458
custom_fonts/font = SubResource( 8 )
text = "Loading..."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Canvas" type="CanvasModulate" parent="."]

[node name="Map" type="Navigation2D" parent="Canvas"]
script = ExtResource( 2 )
tile_set = ExtResource( 3 )

[node name="Cursor" type="Sprite" parent="Canvas/Map"]
visible = false
z_index = 1000
texture = ExtResource( 6 )
centered = false
hframes = 4
frame = 3
script = ExtResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Canvas/Map/Cursor"]
autoplay = "spin"
anims/spin = SubResource( 9 )

[node name="TileLayer0" type="TileMap" parent="Canvas/Map"]
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="TileLayer1" type="TileMap" parent="Canvas/Map"]
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="TileLayer2" type="TileMap" parent="Canvas/Map"]
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="TileLayer3" type="TileMap" parent="Canvas/Map"]
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="Pathing" type="Line2D" parent="Canvas"]

[node name="Player" parent="Canvas" instance=ExtResource( 4 )]

[node name="Camera" type="Camera2D" parent="Canvas/Player"]
current = true
zoom = Vector2( 0.37, 0.37 )
limit_left = 0
limit_top = 0
limit_right = 11200
limit_bottom = 8000
limit_smoothed = true
smoothing_enabled = true
script = ExtResource( 5 )

[connection signal="pressed" from="Debugging/DebugMenu/Buttons/VectorButton" to="." method="_on_debug_vector_button"]
[connection signal="pressed" from="Debugging/DebugMenu/Buttons/Move Right" to="." method="_on_debug_move_button"]
